--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-tionString = "mongodb+srv://mlutz060:DAY6shootme@cluster0.ec3uspr.mongodb.net/?retryWrites=true&w=majority";
+connectionString = "mongodb+srv://mlutz060:DAY6shootme@cluster0.ec3uspr.mongodb.net/?retryWrites=true&w=majority";
