Fixed database connection

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = "mongodb+srv://mlutz060:DAY6shootme@cluster0.ec3uspr.mongodb.net/?retryWrites=true&w=majority";
+DATABASE_URL=mongodb+srv://mlutz060:DAY6shootme@cluster0.ec3uspr.mongodb.net/
